[package]
name = "api-gateway"
version = "0.1.0"
edition = "2021" # Asegúrate que sea la edición correcta

[dependencies]
cadence-common = { path = "../cadence-common" }
iam-service = { path = "../iam-service" }
utoipa = { version = "5.3.1", features = ["axum_extras", "chrono", "uuid"] }

tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }