[package]
name = "iam-service"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "iam-service-executable"
path = "src/main.rs"

[lib]
name = "iam_service_lib"
path = "src/lib.rs"

[dependencies]
cadence-common = { path = "../cadence-common" }
nervio-limiter = { path = "../nervio-limiter", features = ["axum"] }
axum = { version = "0.8", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.41"
utoipa = "5.3.1"
uuid = {version = "1", features = ["v4"]}
sea-orm = { version = "1", features = ["runtime-tokio-rustls", "sqlx-postgres", "macros"] }
rustls = { version = "0.23", features = ["ring"] }
envy = "0.4.2"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
chrono = "0.4.40"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
tower-http = { version = "0.6.2", features = ["cors", "limit"] }